# oobench

./: AUTHORS.sp.ok  COPYING  COPYING.sp.ok  GNUmakefile  IDs  NEWS  NEWS.sp.ok  README  README.sp.ok  THANKS  THANKS.sp.ok  TODO  index.html
C++/: GNUmakefile  README  README.sp.ok  TODO  aclocal.m4  config.cache  config.status  configure  configure.in
C++/Exceptions/: .gdbinit  ExceptionsBenchmark.cpp  ExceptionsPerformance.cpp  WithoutExceptionsPerformance.cpp  config.mk
C++/IO/: ASyncPerformanceLarge.cpp  ASyncPerformanceSmall.cpp  AnsiPerformanceLarge.cpp  AnsiPerformanceSmall.cpp  IOBenchmark.cpp  MmapPerformanceLarge.cpp  MmapPerformanceSmall.cpp  StreamPerformanceSmall.cpp  SynchronizedPerformanceLarge.cpp  SynchronizedPerformanceSmall.cpp  async.h  config.mk
C++/IPC/: IPCBenchmark.cpp
C++/Messages/: MessagesBenchmark.cpp  StaticInlinePerformance.cpp  StaticPerformance.cpp  VirtualPerformance.cpp  config.mk
C++/Numerics/: GNUmakefile  GaussPerformance.cpp  NumericsBenchmark.cpp  config.mk
C++/Numerics/common/: FpuParameters.cpp  config.mk
C++/Patterns/: GNUmakefile
C++/Patterns/Flyweight/: Bitmap.cpp  Bitmap.hpp  DrawContext.cpp  DrawContext.hpp  Flyweight.hpp  FlyweightPerformance.cpp  GNUmakefile  PixelPoint.cpp  PixelPoint.hpp  Screen.cpp  Screen.hpp  config.mk
C++/Patterns/MVC/: ColorsController.cpp  ColorsController.hpp  ColorsModel.cpp  ColorsModel.hpp  DumbColorsView.cpp  InvalidRgbFormatException.cpp  InvalidRgbFormatException.hpp  MVCBenchmark.cpp  MVCPerformance.cpp  README  config.mk
C++/Patterns/MVC/common/: Controller.cpp  Controller.hpp  ControllerEvent.cpp  MVC.hpp  Model.cpp  Model.hpp  Observer.cpp  View.cpp
C++/STL/: GNUmakefile
C++/STL/Algorithms/: AlgorithmBenchmark.cpp  AlgorithmPerformance.cpp  FunctionObjectPerformance.cpp  WithoutFunctionObjectPerformance.cpp  config.mk
C++/STL/Containers/: ContainerBenchmark.cpp  Integer.cpp  ListPerformance.cpp  MapPerformance.cpp  SetPerformance.cpp  VectorPerformance.cpp  config.mk
C++/STL/Strings/: StringPerformance.cpp  config.mk  makefile
C++/Threads/: GNUmakefile  ThreadCreationPerformance.cpp  config.mk
C++/Threads/Contention/: ContentionBenchmark.cpp  ThreadSwitchPerformance.cpp  config.mk
C++/common/: .cvsignore  AbstractBenchmark.cpp  Doxyfile  GNUmakefile  Runnable.cpp  Stopwatch.cpp  StopwatchTest.cpp  Thread.cpp  common.gmake  common.includes.gmake  common.includes.nmake  common.mk  common.nmake  config.h  config.h.in  config.mk  config.mk.in  makefile  ostringstream.h
C++/doc/: GNUmakefile
Java/: GNUmakefile  README  README.sp.ok  TODO  aclocal.m4  configure  configure.in
Java/doc/: GNUmakefile  build.xml
Java/org/oobench/: GNUmakefile  build.xml
Java/org/oobench/classloading/: .cvsignore  ClassLoadingBenchmark.java  GNUmakefile  bench.sh  example.sh  manifyClass.pl  run.sh
Java/org/oobench/collections/: ArrayListPerformance.java  CollectionBenchmark.java  CollectionsBenchmark.java  CollectionsPerformanc.Result.txt  HashMapPerformance.java  HashSetPerformance.java  LinkedListPerformance.java  MapBenchmark.java  SetBenchmark.java  TreeMapPerformance.java  TreeSetPerformance.java  VectorPerformance.java  bench.sh  build.xml  run.sh
Java/org/oobench/common/: .cvsignore  AbstractBenchmark.java  GNUmakefile  ObjectScale.java  Stopwatch.java  ant.common.xml.in  ant.subdirs.common.xml  common.mk  config.mk.in  config.sh.in
Java/org/oobench/corba/: build.xml
Java/org/oobench/ejb/: GNUmakefile
Java/org/oobench/exceptions/: ExceptionsBenchmark.java  ExceptionsPerformance.java  GNUmakefile  WithoutExceptionsPerformance.java  bench.sh  build.xml  run.sh
Java/org/oobench/io/: BufferedPerformanceLarge.java  BufferedPerformanceSmall.java  IOBenchmark.java  SynchronizedPerformanceLarge.java  SynchronizedPerformanceSmall.java  bench.sh  build.xml  run.sh
Java/org/oobench/messages/: MessagesBenchmark.java  StaticFinalPerformance.java  StaticPerformance.java  VirtualPerformance.java  bench.sh  build.xml  example.sh  run.sh
Java/org/oobench/numerics/: GaussPerformance.java  NumericsBenchmark.java  bench.sh  build.xml
Java/org/oobench/patterns/: GNUmakefile  build.xml
Java/org/oobench/rmi/: ClientInterface.java  GNUmakefile  RMIBenchmark.java  Server.java  (+5 more)
Objective-C/: .cvsignore  GNUmakefile  README  README.sp.ok  a  a.m  aclocal.m4  config.status  configure  configure.in
Objective-C/Foundation/: GNUmakefile
Objective-C/Foundation/Archiving/: .tmp.archive  ArchiveClassComplex.m  ArchiveClassSimple.m  ArchivingBenchmark.m  ArchivingPerformance.m  ArchivingPerformance.mk  ArchivingPerformanceComplex.m  ArchivingPerformanceComplex.mk  ArchivingPerformanceSimple.m  ArchivingPerformanceSimple.mk  GNUmakefile  bench.sh  example.sh
Objective-C/Foundation/Collections/: CollectionsBenchmark.m  GNUmakefile  Integer.m  NSArrayPerformance.m  NSArrayPerformance.mk  NSDictionaryPerformance.m  NSDictionaryPerformance.mk  NSSetPerformance.m  NSSetPerformance.mk  bench.sh
Objective-C/Foundation/Exceptions/: ExceptionsBenchmark.m  ExceptionsPerformance.m  ExceptionsPerformance.mk  GNUmakefile  WithoutExceptionsPerformance.m  WithoutExceptionsPerformance.mk  bench.sh
Objective-C/Messages/: GNUmakefile  MessagesBenchmark.m  StaticPerformance.m  StaticPerformance.mk  VirtualPerformance.m  VirtualPerformance.mk  bench.sh
Objective-C/Patterns/: GNUmakefile
Objective-C/Patterns/Flyweight/: Bitmap.m  DrawContext.m  FlyweightPerformance.m  GNUmakefile  PixelPoint.m  Screen.m  bench.sh
Objective-C/Patterns/MVC/: ColorsController.h  ColorsController.m  ColorsModel.h  ColorsModel.m  DumbColorsView.h  DumbColorsView.m  GNUmakefile  InvalidRgbFormatException.h  InvalidRgbFormatException.m  MVCBenchmark.m  MVCPerformance.m  bench.sh
Objective-C/Patterns/Proxy/: Data.m  GNUmakefile  ProxyPerformance.m  bench.sh
Objective-C/autom4te.cache/: output.0  requests  traces.0
Objective-C/common/: .cvsignore  AbstractBenchmark.m  Memory.m  Stopwatch.m  common.mk  config.h  config.h.in  config.mk  config.mk.in  config.sh  config.sh.in  oob_memory.h
Objective-C/doc/: GNUmakefile
(+185 files in other folders)
